--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "json-server --watch db.json",
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
